@startuml

title __SKANNER's Class Diagram__\n

  package com.koltunm.skanner {
    class Main {
        {static} - defaultConfigFile : String
        + start()
        {static} - initModules()
        {static} + main()
    }
  }
  

  package com.koltunm.skanner {
    class Skanner {
        {static} - instance : Skanner
        - articleList : List<Article>
        - stockQuoteList : List<StockQuote>
        - tweetList : List<Tweet>
        - dataRowList : List<DataRow>
        - analysisCompleted : boolean
        {static} + getInstance()
        + Skanner()
        {static} ~ init()
        + fetchArticles()
        + fetchStockData()
        + fetchTweets()
        + analyzeSentiment()
        + genDataRow()
        + isAnalysisCompleted()
        + isDataFetched()
        + getSentimentAnalyzableList()
        + getDataRowList()
        + predict()
        + load()
        + save()
        + getArticleList()
        + getStockQuoteList()
        + getTweetList()
        + setArticleList()
        + setStockQuoteList()
        + setTweetList()
        + getFetcherForm()
        + setFetcherForm()
        + getDataSet()
        + getPredictionResult()
        + setPredictionResult()
    }
  }
  

  package com.koltunm.skanner {
    interface SkannerInterface {
        {abstract} + fetchArticles()
        {abstract} + fetchStockData()
        {abstract} + fetchTweets()
        {abstract} + analyzeSentiment()
        {abstract} + setFetcherForm()
        {abstract} + isDataFetched()
        {abstract} + isAnalysisCompleted()
        {abstract} + getFetcherForm()
        {abstract} + getArticleList()
        {abstract} + getStockQuoteList()
        {abstract} + getTweetList()
        {abstract} + getSentimentAnalyzableList()
        {abstract} + getDataRowList()
        {abstract} + predict()
        {abstract} + save()
        {abstract} + load()
        {abstract} + getPredictionResult()
    }
  }
  

  Main -up-|> Application
  Skanner -up-|> SkannerInterface
  Skanner o-- FetcherForm : fetcherForm
  Skanner o-- DataSet : dataSet
  Skanner o-- PredictionResult : predictionResult


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
